Сверстанная приветственная страница
от 04.02.2020

--- a/index.html
+++ b/index.html
@@ -74,5 +74,64 @@
             </div>
         </div>
     </section>
+    <div class="pagination">
+        <ul class="pagination__list">
+            <li class="pagination__item pagination__item--active">
+                <a class="pagination__link">
+
+                </a>
+            </li>
+            <li class="pagination__item">
+                <a class="pagination__link">
+
+                </a>
+            </li>
+            <li class="pagination__item">
+                <a class="pagination__link">
+
+                </a>
+            </li>
+            <li class="pagination__item">
+                <a class="pagination__link">
+
+                </a>
+            </li>
+            <li class="pagination__item">
+                <a class="pagination__link">
+
+                </a>
+            </li>
+            <li class="pagination__item">
+                <a class="pagination__link">
+
+                </a>
+            </li>
+            <li class="pagination__item">
+                <a class="pagination__link">
+
+                </a>
+            </li>
+            <li class="pagination__item">
+                <a class="pagination__link">
+
+                </a>
+            </li>
+            <li class="pagination__item">
+                <a class="pagination__link">
+
+                </a>
+            </li>
+            <li class="pagination__item">
+                <a class="pagination__link">
+
+                </a>
+            </li>
+            <li class="pagination__item">
+                <a class="pagination__link">
+
+                </a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
