сделан раздел МЫ ЛУЧШИЕ

--- a/index.html
+++ b/index.html
@@ -74,6 +74,54 @@
             </div>
         </div>
     </section>
+    <section class="advantages">
+        <div class="container container--advantages container--w960 container--flex">
+            <h2 class="title title--advantages">
+                Мы лучшие
+            </h2>
+            <ul class="advantages__list">
+                <li class="advantages__item">
+                    <div class="advantages__icon icon-meat">
+                        <img src="icons/meat.svg">
+                    </div>
+                    <div class="advantages__content">
+                        <h3 class="advantages__title">
+                            100% свежее мясо
+                        </h3>
+                        <p class="advantages__text">
+                            Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Ямб неравномерен.
+                        </p>
+                    </div>
+                </li>
+                <li class="advantages__item">
+                    <div class="advantages__icon icon-hand">
+                        <img src="icons/hand.svg">
+                    </div>
+                    <div class="advantages__content">
+                        <h3 class="advantages__title">
+                            Ручная сборка
+                        </h3>
+                        <p class="advantages__text">
+                            Драма представляет собой деструктивный цикл. Анапест представляет собой анапест. Первое полустишие притягивает сюжетный реформаторский пафос.
+                        </p>
+                    </div>
+                </li>
+                <li class="advantages__item">
+                    <div class="advantages__content">
+                        <div class="advantages__icon icon-natural">
+                            <img src="icons/natural.svg">
+                        </div>
+                        <h3 class="advantages__title">
+                            Натуральные ингредиенты
+                        </h3>
+                        <p class="advantages__text">
+                            Драма представляет собой деструктивный цикл. Анапест представляет собой анапест.
+                        </p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
     <div class="pagination">
         <ul class="pagination__list">
             <li class="pagination__item pagination__item--active">
