Сделала блок "Отзывы"

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
     </header>
     <section class="about">
-        <div class="container container--about container--w960 container--flex">
+        <div class="container container--about container--w1100 container--flex">
             <div class="about__content">
                 <div class="about__image">
                     <img src="img/burger.png">
@@ -68,14 +68,14 @@
             </div>
 
             <div class="about__arrow-down">
-                <a class="arrow-down" href="#">
+                <a class="arrow-down" href="#advantages">
                     <img src="icons/arrow-scroll.svg">
                 </a>
             </div>
         </div>
     </section>
-    <section class="advantages">
-        <div class="container container--advantages container--w960 container--flex">
+    <section id="advantages" class="advantages">
+        <div class="container container--advantages container--w1100 container--flex">
             <h2 class="title title--advantages">
                 Мы лучшие
             </h2>
@@ -122,10 +122,118 @@
             </ul>
         </div>
     </section>
+    <section id="review" class="review">
+        <div class="container container--review container--w1100 container--flex">
+            <ul class="review__list">
+                <li class="review__item">
+                    <div class="review__photo">
+                       <img src="/img/reviews/1.png">
+                    </div>
+                    <div class="review__content">
+                        <h4 class="review__title">Константин Спилберг</h4>
+                        <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                        <div class="review__detail">
+                            <a class="review__button" href="#">Подробнее</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="review__item review__item--active">
+                    <div class="review__photo">
+                        <img src="/img/reviews/2.png">
+                    </div>
+                    <div class="review__content">
+                        <h4 class="review__title">Константин Спилберг</h4>
+                        <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                        <div class="review__detail">
+                            <a class="review__button" href="#">Подробнее</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="review__item">
+                    <div class="review__photo">
+                        <img src="/img/reviews/3.png">
+                    </div>
+                    <div class="review__content">
+                        <h4 class="review__title">Константин Спилберг</h4>
+                        <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                        <div class="review__detail">
+                            <a class="review__button" href="#">Подробнее</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="review__item">
+                    <div class="review__photo">
+                        <img src="/img/reviews/4.png">
+                    </div>
+                    <div class="review__content">
+                        <h4 class="review__title">Константин Спилберг</h4>
+                        <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                        <div class="review__detail">
+                            <a class="review__button" href="#">Подробнее</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="review__item">
+                    <div class="review__photo">
+                        <img src="/img/reviews/5.png">
+                    </div>
+                    <div class="review__content">
+                        <h4 class="review__title">Константин Спилберг</h4>
+                        <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                        <div class="review__detail">
+                            <a class="review__button" href="#">Подробнее</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="review__item">
+                    <div class="review__photo">
+                        <img src="/img/reviews/6.png">
+                    </div>
+                    <div class="review__content">
+                        <h4 class="review__title">Константин Спилберг</h4>
+                        <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                        <div class="review__detail">
+                            <a class="review__button" href="#">Подробнее</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="review__item">
+                    <div class="review__photo">
+                        <img src="/img/reviews/7.png">
+                    </div>
+                    <div class="review__content">
+                        <h4 class="review__title">Константин Спилберг</h4>
+                        <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                        <div class="review__detail">
+                            <a class="review__button" href="#">Подробнее</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="review__item">
+                    <div class="review__photo">
+                        <img src="/img/reviews/8.png">
+                    </div>
+                    <div class="review__content">
+                        <h4 class="review__title">Константин Спилберг</h4>
+                        <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                        <div class="review__detail">
+                            <a class="review__button" href="#">Подробнее</a>
+                        </div>
+                    </div>
+                </li>
+            </li>
+        </ul>
+    </section>
+
     <div class="pagination">
         <ul class="pagination__list">
             <li class="pagination__item pagination__item--active">
-                <a class="pagination__link">
+                <a class="pagination__link" href="#about">
+
+                </a>
+            </li>
+            <li class="pagination__item">
+                <a class="pagination__link" href="#advantages">
 
                 </a>
             </li>
@@ -145,12 +253,7 @@
                 </a>
             </li>
             <li class="pagination__item">
-                <a class="pagination__link">
-
-                </a>
-            </li>
-            <li class="pagination__item">
-                <a class="pagination__link">
+                <a class="pagination__link" href="#review">
 
                 </a>
             </li>
