внесла правки после группового созвона

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
             </section>
             <section id="review" class="review">
-                <div class="container container--review container--w1100 container--flex">
+                <div class="container--review">
                     <ul class="review__list">
                         <li class="review__item">
                             <div class="review__photo">
