--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="header__left">
                     <div class="logo">
                         <a class="logo__link" href="index.html">
-                            <img src="icons/logo.svg">
+                            <img class="logo__img" src="icons/logo.svg">
                         </a>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
                 </div>
                 <div class="header__right">
                     <div class="btn">
-                        <a class="btn__link" href="#">Заказать</a>
+                        <button class="btn__link" href="#">Заказать</button>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                         Мы лучшие
                     </h2>
                     <ul class="advantages__list">
-                        <li class="advantages__item advantage">
+                        <li class="advantages__item">
                             <div class="advantages__icon icon-meat">
                                 <img src="icons/meat.svg">
                             </div>
@@ -95,7 +95,7 @@
                                 </p>
                             </div>
                         </li>
-                        <li class="advantages__item advantage">
+                        <li class="advantages__item">
                             <div class="advantages__icon icon-hand">
                                 <img src="icons/hand.svg">
                             </div>
@@ -108,7 +108,7 @@
                                 </p>
                             </div>
                         </li>
-                        <li class="advantages__item advantage">
+                        <li class="advantages__item">
                             <div class="advantages__content">
                                 <div class="advantages__icon icon-natural">
                                     <img src="icons/natural.svg">
@@ -125,108 +125,106 @@
                 </div>
             </section>
             <section id="review" class="section review">
-                <div class="container--review">
-                    <ul class="review__list">
-                        <li class="review__item reviews">
-                            <div class="review__photo">
-                               <img src="/img/reviews/1.png">
+                <ul class="review__list">
+                    <li class="review__item">
+                        <div class="review__photo">
+                            <img src="/img/reviews/1.png">
+                        </div>
+                        <div class="review__content">
+                            <h4 class="review__title">Константин Спилберг</h4>
+                            <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            <div class="btn btn--black">
+                                <button class="btn__link" href="#">Подробнее</button>
                             </div>
-                            <div class="review__content">
-                                <h4 class="review__title">Константин Спилберг</h4>
-                                <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                <div class="review__detail">
-                                    <a class="review__button" href="#">Подробнее</a>
-                                </div>
+                        </div>
+                    </li>
+                    <li class="review__item">
+                        <div class="review__photo">
+                            <img src="/img/reviews/2.png">
+                        </div>
+                        <div class="review__content">
+                            <h4 class="review__title">Константин Спилберг</h4>
+                            <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            <div class="btn btn--black">
+                                <button class="btn__link" href="#">Подробнее</button>
                             </div>
-                        </li>
-                        <li class="review__item reviews review__item--active">
-                            <div class="review__photo">
-                                <img src="/img/reviews/2.png">
+                        </div>
+                    </li>
+                    <li class="review__item">
+                        <div class="review__photo">
+                            <img src="/img/reviews/3.png">
+                        </div>
+                        <div class="review__content">
+                            <h4 class="review__title">Константин Спилберг</h4>
+                            <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            <div class="btn btn--black">
+                                <button class="btn__link" href="#">Подробнее</button>
                             </div>
-                            <div class="review__content">
-                                <h4 class="review__title">Константин Спилберг</h4>
-                                <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                <div class="review__detail">
-                                    <a class="review__button" href="#">Подробнее</a>
-                                </div>
+                        </div>
+                    </li>
+                    <li class="review__item">
+                        <div class="review__photo">
+                            <img src="/img/reviews/4.png">
+                        </div>
+                        <div class="review__content">
+                            <h4 class="review__title">Константин Спилберг</h4>
+                            <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            <div class="btn btn--black">
+                                <button class="btn__link" href="#">Подробнее</button>
                             </div>
-                        </li>
-                        <li class="review__item reviews">
-                            <div class="review__photo">
-                                <img src="/img/reviews/3.png">
+                        </div>
+                    </li>
+                    <li class="review__item">
+                        <div class="review__photo">
+                            <img src="/img/reviews/5.png">
+                        </div>
+                        <div class="review__content">
+                            <h4 class="review__title">Константин Спилберг</h4>
+                            <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            <div class="btn btn--black">
+                                <button class="btn__link" href="#">Подробнее</button>
                             </div>
-                            <div class="review__content">
-                                <h4 class="review__title">Константин Спилберг</h4>
-                                <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                <div class="review__detail">
-                                    <a class="review__button" href="#">Подробнее</a>
-                                </div>
+                        </div>
+                    </li>
+                    <li class="review__item">
+                        <div class="review__photo">
+                            <img src="/img/reviews/6.png">
+                        </div>
+                        <div class="review__content">
+                            <h4 class="review__title">Константин Спилберг</h4>
+                            <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            <div class="btn btn--black">
+                                <button class="btn__link" href="#">Подробнее</button>
                             </div>
-                        </li>
-                        <li class="review__item">
-                            <div class="review__photo">
-                                <img src="/img/reviews/4.png">
+                        </div>
+                    </li>
+                    <li class="review__item">
+                        <div class="review__photo">
+                            <img src="/img/reviews/7.png">
+                        </div>
+                        <div class="review__content">
+                            <h4 class="review__title">Константин Спилберг</h4>
+                            <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            <div class="btn btn--black">
+                                <button class="btn__link" href="#">Подробнее</button>
                             </div>
-                            <div class="review__content">
-                                <h4 class="review__title">Константин Спилберг</h4>
-                                <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                <div class="review__detail">
-                                    <a class="review__button" href="#">Подробнее</a>
-                                </div>
+                        </div>
+                    </li>
+                    <li class="review__item">
+                        <div class="review__photo">
+                            <img src="/img/reviews/8.png">
+                        </div>
+                        <div class="review__content">
+                            <h4 class="review__title">Константин Спилберг</h4>
+                            <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
+                            <div class="btn btn--black">
+                                <button class="btn__link" href="#">Подробнее</button>
                             </div>
-                        </li>
-                        <li class="review__item">
-                            <div class="review__photo">
-                                <img src="/img/reviews/5.png">
-                            </div>
-                            <div class="review__content">
-                                <h4 class="review__title">Константин Спилберг</h4>
-                                <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                <div class="review__detail">
-                                    <a class="review__button" href="#">Подробнее</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="review__item">
-                            <div class="review__photo">
-                                <img src="/img/reviews/6.png">
-                            </div>
-                            <div class="review__content">
-                                <h4 class="review__title">Константин Спилберг</h4>
-                                <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                <div class="review__detail">
-                                    <a class="review__button" href="#">Подробнее</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="review__item">
-                            <div class="review__photo">
-                                <img src="/img/reviews/7.png">
-                            </div>
-                            <div class="review__content">
-                                <h4 class="review__title">Константин Спилберг</h4>
-                                <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                <div class="review__detail">
-                                    <a class="review__button" href="#">Подробнее</a>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="review__item">
-                            <div class="review__photo">
-                                <img src="/img/reviews/8.png">
-                            </div>
-                            <div class="review__content">
-                                <h4 class="review__title">Константин Спилберг</h4>
-                                <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
-                                <div class="review__detail">
-                                    <a class="review__button" href="#">Подробнее</a>
-                                </div>
-                            </div>
-                        </li>
+                        </div>
                     </li>
                 </ul>
             </section>
-            <section class="section order--section">
+            <section id="order" class="section order--section">
                 <div class="container container--order">
                     <h2 class="title title--order">
                         Закажите доставку
@@ -310,17 +308,7 @@
                 </a>
             </li>
             <li class="pagination__item">
-                <a class="pagination__link">
-
-                </a>
-            </li>
-            <li class="pagination__item">
-                <a class="pagination__link">
-
-                </a>
-            </li>
-            <li class="pagination__item">
-                <a class="pagination__link">
+                <a href="#order" class="pagination__link">
 
                 </a>
             </li>
