--- a/index.html
+++ b/index.html
@@ -124,6 +124,61 @@
                     </ul>
                 </div>
             </section>
+            <section id="team" class="section team">
+                <div class="team__wrapper">
+                    <h2 class="title title--team">Команда</h2>
+                    <ul class="team__list">
+                        <li class="team__item">
+                            <h4 class="team__name">Дэниэл Рэдклифф</h4>
+                            <div class="team__content">
+                                <div class="team__photo">
+                                    <img class="team__img" src="img/aphex.jpg">
+                                </div>
+                                <div class="team__about">
+                                    <p class="team__post">Оператор</p>
+                                    <p class="team__description">С радостью поможет подобрать идеальный бургер и оформить заказ.  </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item team__item--active">
+                            <h4 class="team__name">Ричард Джеймс</h4>
+                            <div class="team__content">
+                                <div class="team__photo">
+                                    <img class="team__img" src="img/aphex.jpg">
+                                </div>
+                                <div class="team__about">
+                                    <p class="team__post">Оператор</p>
+                                    <p class="team__description">С радостью поможет подобрать идеальный бургер и оформить заказ.  </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <h4 class="team__name">Джейк Финн</h4>
+                            <div class="team__content">
+                                <div class="team__photo">
+                                    <img class="team__img" src="img/aphex.jpg">
+                                </div>
+                                <div class="team__about">
+                                    <p class="team__post">Оператор</p>
+                                    <p class="team__description">С радостью поможет подобрать идеальный бургер и оформить заказ.  </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="team__item">
+                            <h4 class="team__name">Николай Иванов</h4>
+                            <div class="team__content">
+                                <div class="team__photo">
+                                    <img class="team__img" src="img/aphex.jpg">
+                                </div>
+                                <div class="team__about">
+                                    <p class="team__post">Оператор</p>
+                                    <p class="team__description">С радостью поможет подобрать идеальный бургер и оформить заказ.  </p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </section>
             <section id="review" class="section review">
                 <ul class="review__list">
                     <li class="review__item">
@@ -293,7 +348,7 @@
                 </a>
             </li>
             <li class="pagination__item">
-                <a class="pagination__link">
+                <a class="pagination__link" href="#team">
 
                 </a>
             </li>
