правки дз 1 неделя

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 <a class="primary-menu__link" href="#team">Команда</a>
                             </li>
                             <li class="primary-menu__item">
-                                <a class="primary-menu__link" href="#">Меню</a>
+                                <a class="primary-menu__link" href="#menu">Меню</a>
                             </li>
                             <li class="primary-menu__item">
                                 <a class="primary-menu__link" href="#review">Отзывы</a>
@@ -43,14 +43,14 @@
                                 <a class="primary-menu__link" href="#">Как мы работаем</a>
                             </li>
                             <li class="primary-menu__item">
-                                <a class="primary-menu__link" href="#">Контакты</a>
+                                <a class="primary-menu__link" href="#contacts">Контакты</a>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="header__right">
                     <div class="btn">
-                        <button class="btn__link" href="#order">Заказать</button>
+                        <button class="btn__link">Заказать</button>
                     </div>
                 </div>
             </div>
@@ -192,13 +192,13 @@
                     </ul>
                 </div>
             </section>
-            <section class="section menu-section">
+            <section id="menu" class="section menu-section">
                 <h2 class="title">
                     Меню
                 </h2>
                 <div class="menu-section__wrapper">
                     <ul class="menu-section__list">
-                        <li class="menu-section__item">
+                        <li class="menu-section__item menu-section__item--active">
                             <div class="menu-section__title-container">
                                 <h4 class="menu-section__title">
                                     Для мясоедов
@@ -247,7 +247,7 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link" href="#">Подробнее</button>
+                                <button class="btn__link">Подробнее</button>
                             </div>
                         </div>
                     </li>
@@ -259,7 +259,7 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link" href="#">Подробнее</button>
+                                <button class="btn__link" >Подробнее</button>
                             </div>
                         </div>
                     </li>
@@ -271,7 +271,7 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link" href="#">Подробнее</button>
+                                <button class="btn__link">Подробнее</button>
                             </div>
                         </div>
                     </li>
@@ -283,7 +283,7 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link" href="#">Подробнее</button>
+                                <button class="btn__link">Подробнее</button>
                             </div>
                         </div>
                     </li>
@@ -295,7 +295,7 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link" href="#">Подробнее</button>
+                                <button class="btn__link">Подробнее</button>
                             </div>
                         </div>
                     </li>
@@ -307,7 +307,7 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link" href="#">Подробнее</button>
+                                <button class="btn__link">Подробнее</button>
                             </div>
                         </div>
                     </li>
@@ -319,7 +319,7 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link" href="#">Подробнее</button>
+                                <button class="btn__link">Подробнее</button>
                             </div>
                         </div>
                     </li>
@@ -331,7 +331,7 @@
                             <h4 class="review__title">Константин Спилберг</h4>
                             <p class="review__text">Мысли все о них и о них, о них и о них. Нельзя устоять, невозможно забыть... Никогда не думал, что булочки могут быть такими мягкими, котлетка такой сочной, а сыр таким расплавленным.</p>
                             <div class="btn btn--black">
-                                <button class="btn__link" href="#">Подробнее</button>
+                                <button class="btn__link">Подробнее</button>
                             </div>
                         </div>
                     </li>
@@ -510,12 +510,12 @@
                 </a>
             </li>
             <li class="pagination__item">
-                <a class="pagination__link" href="#review">
+                <a class="pagination__link" href="#menu">
 
                 </a>
             </li>
             <li class="pagination__item">
-                <a class="pagination__link">
+                <a class="pagination__link" href="#review">
 
                 </a>
             </li>
