сделала меню-гамбургер,внесла правки по адаптиву

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                         <button class="btn__link">Заказать</button>
                     </div>
                 </div>
-                <div class="hamburger-menu">
-                    <a class="hamburger-menu-link" href="">
-                        <div class="hamburger-menu-link__bars"></div>
-                    </a>
-                </div>
+                <a href="#"class="hamburger-menu">
+                    <div class="hamburger-menu__link">
+                        <div class="hamburger-menu__line"></div>
+                    </div>
+                </a>
             </div>
         </header>
         <div class="maincontent">
